# spidergrep

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: cli.rs  fetcher.rs  main.rs  spider.rs  update.rs
