[package]
name = "spidergrep"
version = "0.1.0"
edition = "2021"
description = "Spider a website and grep for a pattern"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.6", features = ["derive"] }
colored = "3.1"
indicatif = "0.18"
regex = "1.12"
reqwest = { version = "0.13", features = ["rustls"], default-features = false }
scraper = "0.26"
tokio = { version = "1.51", features = ["full"] }
url = "2.5"
